--- a/src/styles.css
+++ b/src/styles.css
@@ -112,6 +112,9 @@ input[type="submit"] {
 input::placeholder {
   color: white;
 }
+input:focus {
+    outline:none;
+}
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
